# gnome-online-accounts

./: .gitignore  .gitlab-ci.yml  .gitmodules  COPYING  MAINTAINERS  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  gnome-online-accounts.doap  meson.build  meson_options.txt  meson_post_install.py
.gitlab-ci/: check-potfiles.sh  scanbuild-plist-to-junit.py  scanbuild-wrapper.sh
.gitlab/issue_templates/: Bug.md  Feature.md
data/: Makefile.am  dbus-interfaces.xml  gnome-online-accounts.css  goa-daemon.desktop.in.in  goa-daemon.service.in  goa-identity-service.service.in  goa-prefs.desktop.in  goapanel.ui  meson.build  org.gnome.Identity.service.in  org.gnome.OnlineAccounts.OAuth2.desktop.in  org.gnome.OnlineAccounts.service.in  org.gnome.goa-daemon.desktop.in  org.gnome.online-accounts.gschema.xml  org.gnome.online-accounts.gschema.xml.in
data/icons/: Makefile.am  meson.build
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/256x256/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/96x96/: Makefile.am
data/icons/scalable/: Makefile.am
data/icons/symbolic/: Makefile.am
doc/: CONTRIBUTING.md  Makefile.am  PROVIDER_POLICIES.md  PROVIDER_SETUP.md  configuration.md  goa-daemon.xml  goa-docs.xml  goa-overview.xml  goa-sections.txt  goa.toml.in  goa.types  goals.md  meson.build  overview.md  services.md
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ab.po  af.po  an.po  ar.po  as.po  ast.po  be.po  bg.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  ie.po  (+46 more)
src/: Makefile.am  meson.build
src/daemon/: Makefile.am  goadaemon.c  goadaemon.h  goadaemontypes.h  goatpaccountlinker.c  goatpaccountlinker.h  gposixsignal.c  gposixsignal.h  main.c  meson.build
src/examples/: Makefile.am  add-pocket.c  introspect-providers.c  lastfm-shout.c  list-accounts.c  list-providers.c  mail-monitor.c  mail-query.c  meson.build  tweet.c
src/goa/: Makefile.am  goa-1.0.pc.in  goa.h  goabackend.h  goabackendenums.h  goabackendfacebookprovider.c  goabackendfacebookprovider.h  goabackendgoogleprovider.c  goabackendgoogleprovider.h  goabackendgoogleservice.c  goabackendgoogleservice.h  goabackendimapauth.c  goabackendimapauth.h  goabackendimapauthoauth.c  goabackendimapauthoauth.h  goabackendimapclient.c  goabackendimapclient.h  goabackendimapmail.c  goabackendimapmail.h  goabackendimapmessage.c  goabackendimapmessage.h  goabackendimapprivate.h  goabackendoauth2provider.c  goabackendoauth2provider.h  goabackendoauthprovider.c  goabackendoauthprovider.h  goabackendprovider.c  goabackendprovider.h  goabackendservice.c  goabackendservice.h  goabackendtwitterprovider.c  goabackendtwitterprovider.h  goabackendtypes.h  goabackendyahooprovider.c  goabackendyahooprovider.h  goaclient.c  goaclient.h  goaconfig.h.in  goaenums.h  goaenumtypes.c.template  (+7 more)
src/goabackend/: Makefile.am  goa-backend-1.0.pc.in  goaauthflowbutton.c  goaauthflowbutton.h  goaauthflowwidget.c  goaauthflowwidget.h  goabackend.h  goabackendenums-priv.h  goabackendenums.h  goabackendenumtypes.c.template  goabackendenumtypes.h.template  goabackendinit.c  goabackendtypes.h  goacaldavprovider.c  goacaldavprovider.h  goacarddavprovider.c  goacarddavprovider.h  goacollectionprovider-priv.h  goacollectionprovider.c  goacollectionprovider.h  goadavclient.c  goadavclient.h  goadavconfig.c  goadavconfig.h  goadleynaservermanager.xml  goadleynaservermediadevice.xml  goadlnaservermanager.c  goadlnaservermanager.h  goaeditablelabel.c  goaeditablelabel.h  goaewsclient.c  goaewsclient.h  goaexchangeprovider.c  goaexchangeprovider.h  goafacebookprovider.c  goafacebookprovider.h  goafedoraprovider.c  goafedoraprovider.h  goaflickrprovider.c  goaflickrprovider.h  (+112 more)
src/goaidentity/: Makefile.am  goaalarm.c  goaalarm.h  goaidentity.c  goaidentity.h  goaidentityenumtypes.c.in  goaidentityenumtypes.h.in  goaidentityerror.c  goaidentityerror.h  goaidentityinquiry.c  goaidentityinquiry.h  goaidentityinquiryprivate.h  goaidentitymanager.c  goaidentitymanager.h  goaidentitymanagererror.c  goaidentitymanagererror.h  goaidentitymanagerprivate.h  goaidentityservice.c  goaidentityservice.h  goaidentityutils.c  goaidentityutils.h  goakerberosidentity.c  goakerberosidentity.h  goakerberosidentityinquiry.c  goakerberosidentityinquiry.h  goakerberosidentitymanager.c  goakerberosidentitymanager.h  goalinuxnotificationstream.c  goalinuxnotificationstream.h  goalinuxwatchqueue-priv.h  main.c  meson.build  org.freedesktop.realmd.xml  org.gnome.Identity.xml  um-realm-manager.c
src/panel/: Makefile.am  cc-online-accounts-model.c  cc-online-accounts-panel.c  goaeditablelabel.c  goaeditablelabel.h  goapanel.c  goapanel.h  goapanelaccountsmodel.c  goapanelaccountsmodel.h
subprojects/: .gitignore  gtk.wrap  librest.wrap
